[package]
name = "bot"
version = "0.1.0"
authors = ["Marco <a@a.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version="1.4.0", features=["macros" ,"rt-multi-thread"] }
lazy_static = "1.4.0"
regex = "1"
rand = "0.8.3"
